# mcp-python-filesystem

./: .flake8  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  setup.py
.github/workflows/: dependencies.yml  lint.yml  security.yml  test.yml  tests.yml
src/filesystem/: __init__.py  decorators.py  main.py
src/filesystem/context/: __init__.py  filesystem.py
src/filesystem/models/: __init__.py  base.py  schemas.py
src/filesystem/server/: main.py
src/filesystem/tools/: __init__.py  base.py  directory_operations.py  file_operations.py  pdf_operations.py
tests/: conftest.py
tests/integration/: __init__.py
tests/integration/tools/: test_file_operations.py  test_file_operations_integration.py
tests/unit/: test_decorators.py
tests/unit/context/: test_filesystem.py
tests/unit/tools/: test_directory_operations.py  test_file_operations.py  test_pdf_operations.py
